change ingredients to extras
